--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         </div>
         <div id="user-input-section"></div>
         <canvas id="canvas"></canvas>
-        <div id="new-game-container" c
-            lass="new-game-container">
-        </div>
+      <div id="new-game-container" class="new-game-popup hide">
         <div id="result-text"></div>
         <button id="new-game-button">New Game</button>
+      </div>
     </div>
-</body>
+    <!-- Script -->
+    <script src="script.js"></script>
+  </body>
 </html>
